--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -120,8 +120,17 @@ width: auto;
     margin-right:50%;
     margin: auto;
 }
-.h1 {
+h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     color: white;
+    font-size: 400%;
+    font-weight: bold;
+}
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    color: white;
+    font-size: 130%;
+    font-weight: bold;
 }
