--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,148 +1,131 @@
-@media only screen and (max-width: 700px) {
-  #bigscreen {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 700px) {
-  #navbar {
-    display: none;
-  }
-}
-
-.container {
-  background-image: url("../img/background.gif");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100%;
-  width: auto;
-}
-
-.jumbotron {
-  background-color: transparent;
-}
-
-.body {
-  background-color: #947b7b;
-  text-align: center;
-}
-
-#cook {
-  height: 400px;
-  width: auto;
-  display: block;
-}
-
-#cook:active {
-  height: 390px;
-  width: auto;
-}
-
-@media only screen and (max-width: 500px) {
-  #cook {
-    height: 200px;
-    width: auto;
-  }
-  #cook:active {
-    height: 190px;
-    width: auto;
-  }
-}
-
-.btn1 {
-  margin-left: 50%;
-  margin-right: 50%;
-  margin: auto;
-}
-
-.btn1 {
-  -webkit-box-shadow: 9px 10px 7px 4px #3d4d39;
-  box-shadow: 9px 10px 7px 4px #3d4d39;
-  background-color: transparent;
-  border-radius: 15px;
-  border: 1px solid #2c332d;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 28px;
-  font-weight: bold;
-  padding: 17px 75px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627;
-}
-
-.btn1:hover {
-  background-color: red;
-}
-
-.btn1:active {
-  background-color: green;
-}
-
-.btn2 {
-  -webkit-box-shadow: 9px 10px 7px 4px #3d4d39;
-  box-shadow: 9px 10px 7px 4px #3d4d39;
-  background-color: transparent;
-  border-radius: 15px;
-  border: 1px solid #2c332d;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 19px;
-  font-weight: bold;
-  padding: 3px 75px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627;
-}
-
-.btn2:hover {
-  background-color: greenyellow;
-}
-
-.indicator {
-  text-align: center;
-  font-size: 2em;
-  font-style: italic;
-  background-color: yellowgreen;
-  color: white;
-}
-
-.indicator1 {
-  text-align: center;
-  font-size: 4em;
-  font-style: italic;
-  background-color: red;
-  color: white;
-}
-
-#cookie {
-  margin-left: 50%;
-  margin-right: 50%;
-  margin: auto;
-}
-
-.material {
-  margin-left: 50%;
-  margin-right: 50%;
-  margin: auto;
-}
-
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: italic;
-  color: white;
-  font-size: 400%;
-  font-weight: bold;
-}
-
-p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-style: italic;
-  color: white;
-  font-size: 130%;
-  font-weight: bold;
-}
-/*# sourceMappingURL=style.css.map */
+        body {
+            background: url("../img/background2.png") no-repeat center center fixed;
+            background-size: cover;
+            text-align: center;
+        }
+        
+        .btn1 {
+            margin-left: 50%;
+            margin-right: 50%;
+            margin: auto;
+        }
+        
+        #cook {
+            height: 400px;
+            width: auto;
+            display: block;
+        }
+        
+        @media only screen and (max-width: 500px) {
+            #cook {
+                height: 200px;
+                width: auto;
+            }
+        }
+        
+        .btn1 {
+            margin-left: 50%;
+            margin-right: 50%;
+            margin: auto;
+        }
+        
+        .btn1 {
+            -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
+            -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
+            box-shadow: inset 0px 1px 0px 0px #ffffff;
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+            background: -moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+            background: -webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+            background: -o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+            background: -ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+            background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+            filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf', GradientType=0);
+            background-color: #ededed;
+            -moz-border-radius: 24px;
+            -webkit-border-radius: 24px;
+            border-radius: 24px;
+            border: 6px solid #858484;
+            display: inline-block;
+            cursor: pointer;
+            color: #777777;
+            font-family: Arial;
+            font-size: 3em;
+            padding: 18px 76px;
+            text-decoration: none;
+            text-shadow: 0px 0px 0px #ffffff;
+            font-family: china;
+        }
+        
+        .btn1:hover {
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+            background: -moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+            background: -webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+            background: -o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+            background: -ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+            background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+            filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed', GradientType=0);
+            background-color: #dfdfdf;
+        }
+        
+        .btn1:active {
+            position: relative;
+            top: 1px;
+        }
+        
+        .btn2:hover {
+            background-color: greenyellow;
+        }
+        
+        .indicator {
+            text-align: center;
+            font-size: 2em;
+            font-style: italic;
+            background-color: yellowgreen;
+            margin: 10px;
+            border-radius: 5px;
+            color: white;
+            margin-bottom: 2%;
+            border: 5px solid green
+        }
+        
+        #cookie {
+            margin-left: 50%;
+            margin-right: 50%;
+            margin: auto;
+            padding-top: 3%;
+        }
+        
+        .material {
+            margin-left: 50%;
+            margin-right: 50%;
+            margin: auto;
+        }
+        
+        h1 {
+            font-family: china;
+            color: rgb(255, 255, 255);
+            font-size: 12em;
+            padding-top: 2%;
+            text-shadow: 8px 8px #4e4e4e;
+        }
+        
+        p {
+            font-family: china;
+            font-style: italic;
+            color: white;
+            font-size: 130%;
+            font-weight: bold;
+        }
+        
+        .indicator1 {
+            font-size: 100px;
+            font-family: china;
+            color: white;
+            background-color: black;
+            border-radius: 10px;
+        }
+        
+        @font-face {
+            font-family: china;
+            src: url("../fonts/ChineseDragon.ttf");
+        }
