--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,16 +11,9 @@
         }
         
         #cook {
-            height: 400px;
+            height: 300px;
             width: auto;
             display: block;
-        }
-        
-        @media only screen and (max-width: 500px) {
-            #cook {
-                height: 200px;
-                width: auto;
-            }
         }
         
         .btn1 {
@@ -50,7 +43,7 @@
             color: #777777;
             font-family: Arial;
             font-size: 3em;
-            padding: 18px 76px;
+            padding: 0, 5%;
             text-decoration: none;
             text-shadow: 0px 0px 0px #ffffff;
             font-family: china;
@@ -65,15 +58,6 @@
             background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
             filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed', GradientType=0);
             background-color: #dfdfdf;
-        }
-        
-        .btn1:active {
-            position: relative;
-            top: 1px;
-        }
-        
-        .btn2:hover {
-            background-color: greenyellow;
         }
         
         .indicator {
@@ -92,7 +76,6 @@
             margin-left: 50%;
             margin-right: 50%;
             margin: auto;
-            padding-top: 3%;
         }
         
         .material {
@@ -104,25 +87,18 @@
         h1 {
             font-family: china;
             color: rgb(255, 255, 255);
-            font-size: 12em;
+            font-size: 8em;
             padding-top: 2%;
             text-shadow: 8px 8px #4e4e4e;
         }
         
-        p {
-            font-family: china;
-            font-style: italic;
-            color: white;
-            font-size: 130%;
-            font-weight: bold;
-        }
-        
         .indicator1 {
-            font-size: 100px;
+            font-size: 6em;
             font-family: china;
             color: white;
-            background-color: black;
+            background-color: rgb(71, 71, 71);
             border-radius: 10px;
+            padding: 1%
         }
         
         @font-face {
